fix mobile spacing issue

--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ section {
 
 .section__text__p1 {
   text-align: center;
+  margin: 5px;
 }
 .section__text__p2 {
   font-size: 1.75rem;
@@ -200,6 +201,7 @@ section {
 .title {
   font-size: 3rem;
   text-align: center;
+  margin: 2px;
 }
 
 #socials-container {
